feat: 集成 Agent 编排架构、多模型支持、@Tool 工具集及文件生成优化